--- a/season_4/CSS/CSS Box Model/css_box_model.css
+++ b/season_4/CSS/CSS Box Model/css_box_model.css
@@ -47,11 +47,7 @@ body {
 /* Styling for the buttons container */
 .buttons-container {
     display: flex;
-    flex-direction: row; 
-    justify-content: center;
-
-    /* Stack buttons horizontal/
-    
+    flex-direction: row; /* Stack buttons horizontal/
     gap: 10px;  /* Space between buttons */
 }
 
@@ -78,11 +74,13 @@ body {
 }
 #btnMargin{
     background-color: orange;
-    }
+    
+}
 
 #btnBorder{
 
     background-color: white;
+   
     border:black 4px solid;
 }
 
